--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <form action="#" class="search">
             <input
               type="text"
-              class="search_input"
+              class="search__input"
               placeholder="Search Location"
             />
             <button class="search__button">
@@ -36,7 +36,7 @@
               alt="avatar: Nathan"
               class="user__avatar"
             />
-            <span class="user_name">Nathan</span>
+            <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
         </div>
